[project]
name = "pybtls"
version = "0.4.0"
description = "A package for short-to-mid span bridge traffic loading simulation"
readme = "README.rst"
requires-python = ">=3.9"
authors = [
    { name="Colin Caprani", email="colin.caprani@monash.edu" }, 
    { name="Ziyi Zhou", email="ziyi.zhou@monash.edu" },
    { name="Akbar Rizqiansyah", email="akbar.rizqiansyah@monash.edu" }
]
license = { text = "GNU GPL v3" }
keywords = ["bridge", "traffic", "simulation"]
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "scipy"
]

[project.urls]
Documentation = "https://github.com/ccaprani/btls"
Source = "https://github.com/ccaprani/btls"
Tracker = "https://github.com/ccaprani/btls/issues"

[project.optional-dependencies]
test = ["pytest>=6.0", "pycba>=0.5"]

[build-system]
requires = [
    "scikit-build-core>=0.8",
    "pybind11>=2.10.0",
    "cmake>=3.25",
    "ninja",
    "wheel",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["py/pybtls"]
sdist.include = ["py/pybtls/data/*/*/*.csv"]
sdist.exclude = []

[tool.scikit-build.cmake.define]
Binary = "OFF"
PythonLib = "ON"

[tool.cibuildwheel]
# The CPython wheels (cibuildwheel handles the matrix internally)
build = "cp39-* cp310-* cp311-* cp312-*"
# Baseline skips (no PyPy)
skip = "pp*"
# Test settings
test-extras = ["test"]
test-command = "pytest -q {project}/tests"
build-verbosity = 1

# Linux-specific: also skip 32-bit manylinux if you don’t ship it
[tool.cibuildwheel.linux]
skip = "*-manylinux_i686 pp*"

# Windows-specific: skip 32-bit
[tool.cibuildwheel.windows]
skip = "*-win32 pp*"

# macOS-specific (both Intel & Apple Silicon runners)
[tool.cibuildwheel.macos]
# nothing extra here, can pin a minimum target if needed, e.g.:
# environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }

