[project]
name = "pybtls"
version = "1.0.0"
description = "A package for short-to-mid span bridge traffic loading simulation"
readme = "README.rst"
requires-python = ">=3.9"
authors = [
    { name="Colin Caprani", email="colin.caprani@monash.edu" }, 
    { name="Ziyi Zhou", email="ziyi.zhou@monash.edu" },
    { name="Akbar Rizqiansyah", email="akbar.rizqiansyah@monash.edu" }
]
license = { text = "GNU GPL v3" }
keywords = ["bridge", "traffic", "simulation"]
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "scipy"
]

[project.urls]
Documentation = "https://github.com/ccaprani/btls"
Source = "https://github.com/ccaprani/btls"
Tracker = "https://github.com/ccaprani/btls/issues"

[project.optional-dependencies]
test = ["pytest>=6.0", "pycba>=0.5"]

[build-system]
requires = [
    "scikit-build-core>=0.8",
    "pybind11>=2.10.0",
    "cmake>=3.25",
    "ninja",
    "wheel",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["py/pybtls"]
sdist.include = ["py/pybtls/data/*/*/*.csv"]
sdist.exclude = []

[tool.scikit-build.cmake.define]
Binary = "OFF"
PythonLib = "ON"

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux_* *_i686 *-win32 pp*"

test-extras = ["test"]
test-command = "pytest -q {project}/tests"
build-verbosity = 1
before-all = "python -m pip install -U pip"
