[project]
name = "pybtls"
version = "1.0.1"
description = "A package for short-to-mid span bridge traffic loading simulation"
readme = "README.rst"
requires-python = ">=3.10" # must be consistent with ci.yml
authors = [
    { name="Colin Caprani", email="colin.caprani@monash.edu" }, 
    { name="Ziyi Zhou", email="ziyi.zhou@monash.edu" },
    { name="Akbar Rizqiansyah", email="akbar.rizqiansyah@monash.edu" }
]
license = { text = "GNU GPL v3" }
keywords = ["bridge", "traffic", "simulation"]
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "scipy"
]

[project.urls]
Documentation = "https://ccaprani.github.io/btls/"
Source = "https://github.com/ccaprani/btls"
Tracker = "https://github.com/ccaprani/btls/issues"

[project.optional-dependencies]
test = ["pytest>=6.0", "pycba>=0.5"]

[build-system]
requires = [
    "scikit-build-core>=0.8",
    "pybind11>=2.10.0",
    "cmake>=3.25",
    "ninja",
    "wheel",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["py/pybtls"]
sdist.include = ["py/pybtls/data/*/*/*.csv"]
sdist.exclude = []

[tool.scikit-build.cmake.define]
Binary = "OFF"
PythonLib = "ON"

[tool.cibuildwheel]
build = "cp3*-*" # will only build python versions in ci.yml
skip = "pp*"
test-extras = ["test"]
test-command = "pytest -q {project}/tests"
build-verbosity = 1

[tool.cibuildwheel.linux]
skip = "*-manylinux_i686 *-musllinux_*"

[tool.cibuildwheel.windows]
skip = "*-win32"            # drop 32-bit on Windows

# [tool.cibuildwheel.macos]
# (no extra skips needed if using separate macOS runners for Intel/ARM)