[metadata]
name = PyBTLS
description = A package for short-to-mid span bridge traffic loading simulation
url = 
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GPL v3
license_files = LICENSE
keyword = bridge, vehicle, traffic
author = Colin Caprani
author_email = colin.caprani@monash.edu
classifiers =
    Development Status :: 1 - Alpha
    Topic :: Scientific/Engineering
    Environment :: Console
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: GNU GPL v3 License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls = 
    Documentation = 
    Source = 
    Tracker = 

[options]
py_modules = PyBTLS
packages = find:
package_dir = 
    =python
platforms = any
include_package_data = True
python_requires = >=3.6
setup_requires =
    setuptools>=42
install_requires = 

zip_safe = False

[options.packages.find]
where = python

[bdist_wheel]
universal = True

[aliases]
test=pytest

[options.extras_require]
test =
    pytest>=6.2.2
