[metadata]
name = PyBTLS
description = A package for short-to-mid span bridge traffic loading simulation
url = 
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GPL v3
license_files = LICENSE
keyword = bridge, vehicle, loading, traffic
author = Colin Caprani, Ziyi Zhou, Akbar Rizqiansyah
author_email = colin.caprani@monash.edu, ziyi.zhou@monash.edu, akbar.rizqiansyah@monash.edu
classifiers =
    Development Status :: 1 - Alpha
    Topic :: Scientific/Engineering
    Environment :: Console
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: GPLv3 License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls = 
    Documentation = 
    Source = 
    Tracker = 

[options]
py_modules = PyBTLS
packages = find:
package_dir = 
    =py
platforms = any
include_package_data = True
python_requires = >=3.9
setup_requires =
    setuptools>=42
install_requires = 
    matplotlib
    numpy
    pandas
    scipy
    seaborn

zip_safe = False

[options.packages.find]
where = py

[options.package_data]
PyBTLS = data/*/*/*.csv

[bdist_wheel]
universal = True

[aliases]
test=pytest

[options.extras_require]
test =
    pytest>=6.2.2
